CHANGELOG
=========


2019-07-25
----------

### Changelog extractor
* (Py)MISP support added

### Tests
* Added tests for the misp changelog extractor


2019-07-21
----------

### Changelog extractor
* markdown: add support for shodan style (no ### headings)
* markdown: harmonize headings to ATX-style

### Tests
* Added tests for changelog_extractor, rst conversion

2019-06-30
----------

### Setup
* remove classifier for 3.4, does not build there, not a relevant platform anyway

### Changelog extractor
* Add generic rst conversion, tested with xarray, merged in xonsh
* Add format detection based on filename
* Detect whats-new changelog files
* Handle broken pipe errors gracefully
* Generic markdown conversion
* Finish isort conversion

### Tests
* Added tests for changelog_extractor, rst conversion

2019-06-09
----------

### Tests
* Added for common.conversion.Version

### Common
* conversion.Version:
  * denies text-only versions
  * split also for dashes

### changelog extractor
* Add support for axel, improve debian support
* improve detection of changelog in tarballs

### check-anitya
* Ignore versions that can't be parsed.

2019-06-02
----------

### changelog extractor
* Added

2018-03-11
----------

### branch-and-fix-license
* Added initial code

### license_rewriter
* Added initial code

2018-03-10
----------

### check-anitya
* parallelization
* supports not redirected exact matches

### common
* conversion:
 * add Version class for parsing and comparison
 * add IntStr class for permissive conversions between int and str

2018-02-26
----------

### check-anitya
* Added initial code
* Finds project IDs itself

### common
* config: added config read function
* zypper: add package version parser